--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@
 /public/hot
 /public/storage
 /storage/*.key
-/storage/pail
+/storage/*.log
+/storage/framework/*
+/storage/logs/*
+/storage/app/*
 /vendor
-.env
+/.env
 .env.backup
 .env.production
 .phpactor.json
@@ -21,3 +24,14 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+
+# Laravel specific files
+/storage/
+public/storage
+bootstrap/cache
+
+# Ignoring environment files
+/.env.example
+
+# Ignoring other cache files
+/.phpunit.result.cache
